--- a/school-portal/src/main/resources/templates/add/add-student.html
+++ b/school-portal/src/main/resources/templates/add/add-student.html
@@ -5,22 +5,21 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <title>School</title>
-    <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" th:href="@{/assets/bootstrap/css/bootstrap.min.css}">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600,700,900">
-    <link rel="stylesheet" href="assets/css/Animation-Cards-_app.css">
-    <link rel="stylesheet" href="assets/css/Animation-Cards.css">
-    <link rel="stylesheet" href="assets/css/Form-Select---Full-Date---Month-Day-Year.css">
+    <link rel="stylesheet" th:href="@{/assets/css/Animation-Cards-_app.css}">
+    <link rel="stylesheet" th:href="@{/assets/css/Animation-Cards.css}">
+    <link rel="stylesheet" th:href="@{/assets/css/Form-Select---Full-Date---Month-Day-Year.css}">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/daterangepicker/daterangepicker.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/lightpick@1.3.4/css/lightpick.min.css">
-    <link rel="stylesheet"
-          href="https://cdnjs.cloudflare.com/ajax/libs/jquery.tablesorter/2.31.2/css/theme.bootstrap_4.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jquery.tablesorter/2.31.2/css/theme.bootstrap_4.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.css">
-    <link rel="stylesheet" href="assets/css/List-Grid-Liste-Gille-hover.css">
-    <link rel="stylesheet" href="assets/css/Ludens---1-Index-Table-with-Search--Sort-Filters-v20.css">
-    <link rel="stylesheet" href="assets/css/Navbar-Right-Links-Dark-icons.css">
-    <link rel="stylesheet" href="assets/css/Pretty-Registration-Form-.css">
-    <link rel="stylesheet" href="assets/css/styles.css">
-    <link rel="stylesheet" href="assets/css/untitled.css">
+    <link rel="stylesheet" th:href="@{/assets/css/List-Grid-Liste-Gille-hover.css}">
+    <link rel="stylesheet" th:href="@{/assets/css/Ludens---1-Index-Table-with-Search--Sort-Filters-v20.css}">
+    <link rel="stylesheet" th:href="@{/assets/css/Navbar-Right-Links-Dark-icons.css}">
+    <link rel="stylesheet" th:href="@{/assets/css/Pretty-Registration-Form-.css}">
+    <link rel="stylesheet" th:href="@{/assets/css/styles.css}">
+    <link rel="stylesheet" th:href="@{/assets/css/untitled.css}">
 </head>
 
 <body style="min-height: 740px;display: flex;flex-direction: column;background: var(--bs-secondary-bg);">
@@ -28,24 +27,29 @@
 <div class="container" style="min-height: 80.9vh;">
     <div class="row register-form">
         <div class="col-md-8 offset-md-2">
-            <form class="custom-form">
-                <h1>Add student to {class}</h1>
-                <div class="row form-group">
-                    <div class="col-sm-4 label-column"><label class="col-form-label" for="name-input-field">First
-                        name</label></div>
-                    <div class="col-sm-6 input-column"><input class="form-control" type="text"></div>
+            <form class="custom-form" th:action="@{/admin/add-student/{classId}(classId=${class.id})}" th:object="${studentForm}"
+                  method="post">
+                <h1>Add student to Class <span th:text="${class.year} + ' ' + ${class.section}"></span></h1>
+                <div th:if="${#fields.hasErrors()}">
+                    <p class="alert alert-danger" role="alert">All fields must be completed.</p>
                 </div>
                 <div class="row form-group">
-                    <div class="col-sm-4 label-column"><label class="col-form-label" for="email-input-field">Last
-                        name</label></div>
-                    <div class="col-sm-6 input-column"><input class="form-control" type="text"></div>
+                    <div class="col-sm-4 label-column"><label class="col-form-label" for="firstName">First name</label></div>
+                    <div class="col-sm-6 input-column"><input class="form-control" type="text" th:field="*{firstName}"
+                                                              id="firstName"></div>
                 </div>
                 <div class="row form-group">
-                    <div class="col-sm-4 label-column"><label class="col-form-label"
-                                                              for="pawssword-input-field">Email</label></div>
-                    <div class="col-sm-6 input-column"><input class="form-control" type="email"></div>
+                    <div class="col-sm-4 label-column"><label class="col-form-label" for="lastName">Last name</label></div>
+                    <div class="col-sm-6 input-column"><input class="form-control" type="text" th:field="*{lastName}" id="lastName">
+                    </div>
                 </div>
-                <button class="btn btn-light submit-button" type="button">Submit</button>
+                <div class="row form-group">
+                    <div class="col-sm-4 label-column"><label class="col-form-label" for="email">Email</label></div>
+                    <div class="col-sm-6 input-column"><input class="form-control" type="email" th:field="*{email}" id="email">
+                    </div>
+                </div>
+                <div th:if="${error}"><p class="alert alert-danger" role="alert">Email is already in use.</p></div>
+                <button class="btn btn-light submit-button" type="submit">Submit</button>
             </form>
         </div>
     </div>
@@ -85,20 +89,20 @@
         </div>
     </div>
 </footer>
-<script src="assets/bootstrap/js/bootstrap.min.js"></script>
-<script src="assets/js/bs-init.js"></script>
+<script th:src="@{/assets/bootstrap/js/bootstrap.min.js}"></script>
+<script th:src="@{/assets/js/bs-init.js}"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/lightpick@1.3.4/lightpick.min.js"></script>
-<script src="assets/js/Date-Range-Picker-datepicker.js"></script>
-<script src="assets/js/DateRangePicker-My-Date-Picker.js"></script>
+<script th:src="@{/assets/js/Date-Range-Picker-datepicker.js}"></script>
+<script th:src="@{/assets/js/DateRangePicker-My-Date-Picker.js}"></script>
 <script src="https://cdn.jsdelivr.net/momentjs/latest/moment.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/daterangepicker/daterangepicker.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.tablesorter/2.31.2/js/jquery.tablesorter.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.tablesorter/2.31.2/js/widgets/widget-filter.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.tablesorter/2.31.2/js/widgets/widget-storage.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
-<script src="assets/js/Ludens---1-Index-Table-with-Search--Sort-Filters-v20-Ludens---1-Index-Table-with-Search--Sort-Filters.js"></script>
-<script src="assets/js/Ludens---1-Index-Table-with-Search--Sort-Filters-v20-Ludens---Material-UI-Actions.js"></script>
+<script th:src="@{/assets/js/Ludens---1-Index-Table-with-Search--Sort-Filters-v20-Ludens---1-Index-Table-with-Search--Sort-Filters.js}"></script>
+<script th:src="@{/assets/js/Ludens---1-Index-Table-with-Search--Sort-Filters-v20-Ludens---Material-UI-Actions.js}"></script>
 </body>
 
 </html>
