--- a/school-portal/src/main/resources/templates/class/class-students.html
+++ b/school-portal/src/main/resources/templates/class/class-students.html
@@ -15,7 +15,8 @@
     <link rel="stylesheet" th:href="@{/assets/css/Form-Select---Full-Date---Month-Day-Year.css}">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/daterangepicker/daterangepicker.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/lightpick@1.3.4/css/lightpick.min.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jquery.tablesorter/2.31.2/css/theme.bootstrap_4.min.css">
+    <link rel="stylesheet"
+          href="https://cdnjs.cloudflare.com/ajax/libs/jquery.tablesorter/2.31.2/css/theme.bootstrap_4.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.css">
     <link rel="stylesheet" th:href="@{/assets/css/List-Grid-Liste-Gille-hover.css}">
     <link rel="stylesheet" th:href="@{/assets/css/Ludens---1-Index-Table-with-Search--Sort-Filters-v20.css}">
@@ -47,24 +48,26 @@
                             <th class="text-center">LAST NAME</th>
                             <th class="text-center">FIRST NAME</th>
                             <th class="text-center">Overall grade</th>
-                            <th class="text-center">unexcused absences</th>
-                            <th class="text-center filter-false sorter-false">actions</th>
+                            <th class="text-center">Unexcused absences</th>
+                            <th class="text-center filter-false sorter-false">Actions</th>
                         </tr>
                         </thead>
                         <tbody class="text-center">
-                        <tr>
-                            <td>{lastName}</td>
-                            <td>{firstName}</td>
-                            <td>{overall grade}</td>
-                            <td>{total no. unexcused ab}</td>
-                            <td class="text-center align-middle" style="max-height: 60px;height: 60px;"><a
-                                    class="btn btnMaterial btn-flat primary semicircle" role="button" href="#"><i
-                                    class="far fa-eye"></i></a><a class="btn btnMaterial btn-flat success semicircle"
-                                                                  role="button" href="#"><i
-                                    class="fas fa-pen"></i></a><a
-                                    class="btn btnMaterial btn-flat accent btnNoBorders checkboxHover" role="button"
-                                    style="margin-left: 5px;" data-bs-toggle="modal" data-bs-target="#delete-modal"
-                                    href="#"><i class="fas fa-trash btnNoBorders" style="color: #DC3545;"></i></a></td>
+                        <tr th:each="student : ${students}">
+                            <td th:text="${student.user.lastName}">Last Name</td>
+                            <td th:text="${student.user.firstName}">First Name</td>
+                            <td th:text="${overallGrades[student.id]}">Overall Grade</td>
+                            <td th:text="${unexcusedAbsences[student.id]}">Unexcused Absences</td>
+                            <td class="text-center align-middle" style="max-height: 60px;height: 60px;">
+                                <a class="btn btnMaterial btn-flat primary semicircle" role="button"
+                                   th:href="@{'/admin/student/' + ${student.id}}"><i class="far fa-eye"></i></a>
+                                <a class="btn btnMaterial btn-flat success semicircle" role="button"
+                                   th:href="@{'/admin/edit-student/' + ${student.id}}"><i class="fas fa-pen"></i></a>
+                                <a class="btn btnMaterial btn-flat accent btnNoBorders checkboxHover" role="button"
+                                   style="margin-left: 5px;" data-bs-toggle="modal" data-bs-target="#delete-modal"
+                                   th:href="@{'/admin/delete-student/' + ${student.id}}"><i
+                                        class="fas fa-trash btnNoBorders" style="color: #DC3545;"></i></a>
+                            </td>
                         </tr>
                         </tbody>
                     </table>
