--- a/school-portal/src/main/resources/templates/student/student-info.html
+++ b/school-portal/src/main/resources/templates/student/student-info.html
@@ -43,11 +43,11 @@
                     <thead class="thead-dark">
                     <tr>
                         <th class="text-center">Course</th>
-                        <th class="text-center">grades</th>
+                        <th class="text-center">Grades</th>
                         <th class="text-center">Overall grade</th>
-                        <th class="text-center">unexcused absences</th>
-                        <th class="text-center">excused absences</th>
-                        <th class="text-center filter-false sorter-false">actions</th>
+                        <th class="text-center">Unexcused absences</th>
+                        <th class="text-center">Excused absences</th>
+                        <th class="text-center filter-false sorter-false">Actions</th>
                     </tr>
                     </thead>
                     <tbody class="text-center">
@@ -61,7 +61,7 @@
                         <td th:text="${unexcusedAbsences[course.id]}"></td>
                         <td th:text="${excusedAbsences[course.id]}"></td>
                         <td class="text-center align-middle" style="max-height: 60px;height: 60px;">
-                            <a class="btn btnMaterial btn-flat primary semicircle" role="button" href="#"><i
+                            <a class="btn btnMaterial btn-flat primary semicircle" role="button" th:href="@{'/admin/student/' + ${student.id} + '/course/' + ${course.course.id}}"><i
                                     class="far fa-eye"></i></a>
                         </td>
                     </tr>
