--- a/school-portal/src/main/resources/templates/course/course-info.html
+++ b/school-portal/src/main/resources/templates/course/course-info.html
@@ -56,10 +56,11 @@
                     <div class="my-auto" style="display: flex;margin-left: 10px;">
                         <a class="btn btnMaterial btn-flat success semicircle" role="button"
                            th:href="@{'/edit-grade/' + ${student.id} + '/' + ${course.id} + '/' + ${grade.id}}"><i class="fas fa-pen"></i></a>
-                        <a class="btn btnMaterial btn-flat accent btnNoBorders checkboxHover" role="button"
-                           style="margin-left: 5px;" th:href="@{'/admin/delete-grade/' + ${grade.id}}"
-                           onclick="return confirm('Are you sure you want to delete this grade?');"><i
-                                class="fas fa-trash btnNoBorders" style="color: #DC3545;"></i></a>
+                        <form th:action="@{'/delete-grade/' + ${student.id} + '/' + ${course.id} + '/' + ${grade.id}}" method="post" onsubmit="return confirm('Are you sure you want to delete this grade?');" style="display:inline;">
+                            <button type="submit" class="btn btnMaterial btn-flat accent btnNoBorders checkboxHover">
+                                <i class="fas fa-trash" style="color: #DC3545;"></i>
+                            </button>
+                        </form>
                     </div>
                 </div>
             </div>
